# fiapp

./: .envrc  .gitignore  .pre-commit-config.yaml  flake.nix  treefmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 134v1qhd8hcw02xymd2759a2x2y8yls4-source  fjcidlzkhkjzhc8dg3n22xhdy99c7zfb-source
backend/: Cargo.toml
backend/src/: main.rs
frontend/: bun.lockb  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
